components/input/inputWithLabel/index.module.scss
.inputWithLabel {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  .labelDefault {
    display: flex;
    align-items: center;
    align-self: flex-start;
    width: 301px;
    height: 24px;
    padding: 3px 0 0 5px;

    font-size: 14px;

    transition: all 0.15s ease;
    &.errMsg {
      color: var(--color-error);

      opacity: 1;
    }
    &.label {
      padding: 3px 0 0 5px;

      color: var(--color-inputBorder);
      font-size: 12px;
    }
  }
  .afterContent {
    position: relative;
    top: -37px;
    right: 20px;

    align-self: flex-end;
    height: 0;

    color: var(--color-primary);
    font-size: 20px;

    user-select: none;
  }
}

